// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Backup  correctly 1`] = `
<main
  className="bg-base-200 min-h-screen"
  data-theme="night"
>
  <div
    className="modal modal-open"
  >
    <div
      className="modal-box w-11/12 max-w-5xl flex flex-col justify-center items-center"
    >
      <div
        className="modal-body  "
      >
        <h1
          className="animate-bounce   text-4xl  flex gap-2 items-center  font-bold text-center mb-4 cursor-pointer"
        >
          <svg
            className="animate-pulse text-primary"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h11a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2h-11zm5 2h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1zm-5 1a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1V3zm9-1h1a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1z"
            />
          </svg>
        </h1>
      </div>
      <div
        className="modal-action"
      >
        <a
          className="btn btn-sm"
          href="/"
          onClick={[Function]}
        >
          Close
        </a>
      </div>
    </div>
  </div>
</main>
`;

exports[`renders Home correctly 1`] = `
<main
  className="bg-base-200 min-h-screen"
  data-theme="night"
>
  <div
    className="drawer"
  >
    <input
      className="drawer-toggle"
      id="edit-columns"
      type="checkbox"
    />
    <div
      className="drawer-content"
    >
      <div
        className="navbar bg-base-00"
      >
        <div
          className="flex-1"
        >
          <button
            className="btn btn-ghost normal-case text-xl gap-1"
            type="button"
          >
            <svg
              className="text-primary"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2.5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h11a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2h-11zm5 2h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1zm-5 1a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1V3zm9-1h1a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1z"
              />
            </svg>
            KanBan-it!
          </button>
        </div>
        <div
          className="flex-none"
        >
          <div
            className="dropdown dropdown-end"
          >
            <div
              className="form-control"
            >
              <label
                className="input-group input-group-xs mr-4 "
              >
                <select
                  className="focus:outline-0 capitalize select select-xs text-base-content w-100 "
                  defaultValue="night"
                  onChange={[Function]}
                >
                  <option
                    value="night"
                  >
                    Kanban-it
                  </option>
                  <option
                    value="cupcake"
                  >
                    light
                  </option>
                  <option
                    value="halloween"
                  >
                    halloween
                  </option>
                  <option
                    value="valentine"
                  >
                    valentine
                  </option>
                  <option
                    value="lemonade"
                  >
                    lemonade
                  </option>
                  <option
                    value="winter"
                  >
                    winter
                  </option>
                </select>
                <span>
                  <svg
                    className="text-base-content "
                    fill="currentColor"
                    height={20}
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 24 24"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0V0z"
                      fill="none"
                    />
                    <path
                      d="M2.53 19.65l1.34.56v-9.03l-2.43 5.86c-.41 1.02.08 2.19 1.09 2.61zm19.5-3.7L17.07 3.98a2.013 2.013 0 00-1.81-1.23c-.26 0-.53.04-.79.15L7.1 5.95a1.999 1.999 0 00-1.08 2.6l4.96 11.97a1.998 1.998 0 002.6 1.08l7.36-3.05a1.994 1.994 0 001.09-2.6zm-9.2 3.8L7.87 7.79l7.35-3.04h.01l4.95 11.95-7.35 3.05z"
                    />
                    <circle
                      cx="11"
                      cy="9"
                      r="1"
                    />
                    <path
                      d="M5.88 19.75c0 1.1.9 2 2 2h1.45l-3.45-8.34v6.34z"
                    />
                  </svg>
                </span>
              </label>
            </div>
          </div>
          <div
            className="dropdown dropdown-end"
          >
            <label
              className="btn btn-ghost btn-circle avatar"
              tabIndex={0}
            >
              <div
                className="w-10 rounded-full"
              >
                <img
                  alt="tets"
                  src="https://placeimg.com/192/192/people"
                />
              </div>
            </label>
            <ul
              className="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52"
              tabIndex={0}
            >
              <li>
                <button
                  className="disabled "
                  disabled={true}
                  type="button"
                >
                  <span
                    className="text-gray-500"
                  >
                    testuser
                  </span>
                </button>
              </li>
              <li>
                <a
                  href="/backup"
                  onClick={[Function]}
                >
                  Backup
                </a>
              </li>
              <li>
                <button
                  className="text-red-500"
                  onClick={[Function]}
                  type="button"
                >
                  Logout
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        className="my-3 p-3"
      >
        <div
          className="flex flex-grow flex-col  mt-4 container-webkit overflow-auto"
        >
          <div
            className="flex  gap-3"
          >
            <a
              className="flex flex-col flex-shrink-0 w-72 mx-5 "
              href="/new"
              onClick={[Function]}
            >
              <div
                className="flex items-center justify-center flex-shrink-0  p-2"
              >
                <span
                  className=" text-sm font-semibold flex gap-2 items-center"
                />
                <div
                  className="flex items-center justify-center w-6 h-6 ml-auto text-primary rounded"
                />
              </div>
              <div
                className="flex flex-col text-primary/30 hover:text-primary/100  rounded h-[700px] outline md:outline-dashed my-2 p-3 overflow-auto column-webkit justify-center items-center"
              >
                <h1
                  className="rotate-90 flex text-2xl justify-center items-center gap-3"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"
                    />
                  </svg>
                  New Column
                </h1>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="drawer-side"
    >
      <label
        className="drawer-overlay"
        htmlFor="edit-columns"
      />
      <ul
        className="menu p-4 w-80 bg-base-100 text-base-content"
      >
        <h1
          className="text-xl text-center font-thin  "
        >
          Edit Columns Order
        </h1>
        <small
          className="text-center text-sm italic font-thin  mb-3"
        >
          Drag and Drop to change order
        </small>
      </ul>
    </div>
  </div>
</main>
`;

exports[`renders Login correctly 1`] = `
<main
  className="bg-base-200 min-h-screen"
  data-theme="night"
>
  <div
    className="min-h-screen flex-col overflow-hidden bg-base-300 flex justify-center items-center"
  >
    <h1
      className=" md:text-6xl text-5xl  flex gap-2 items-center  font-bold text-center mb-4 cursor-pointer"
    >
      <svg
        className="text-primary"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2.5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h11a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2h-11zm5 2h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1zm-5 1a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1V3zm9-1h1a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1z"
        />
      </svg>
      KanBan-it!
    </h1>
    <div
      className="py-12 px-12 bg-base-200 rounded-2xl shadow-xl z-20"
    >
      <div>
        <h1
          className="text-3xl font-bold text-center mb-4 cursor-pointer"
        >
          Login To Start
        </h1>
        <p
          className="w-80 text-center text-sm mb-8 font-semibold text-base-content/60 tracking-wide cursor-pointer"
        >
          Create an account to enjoy all the services without any limtations
        </p>
      </div>
      <div
        className="space-y-4 flex flex-col justify-center items-center"
      >
        <button
          className="py-3 w-64 text-md text-white btn-primary  rounded-2xl flex justify-center text-center gap-2 items-center"
          onClick={[Function]}
          type="button"
        >
          <svg
            fill="currentColor"
            height={20}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 16 16"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z"
            />
          </svg>
          <span>
            Login with Google
          </span>
        </button>
        <button
          className="py-3 w-64 text-md text-white btn-primary  rounded-2xl flex justify-center text-center gap-2 items-center"
          onClick={[Function]}
          type="button"
        >
          <svg
            fill="currentColor"
            height={20}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 16 16"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
            />
          </svg>
          <span>
            Login with Github
          </span>
        </button>
      </div>
    </div>
    <span>
      Created by
      <a
        className="text-primary"
        href="https://chala.dev"
        rel="noreferrer"
        target="_blank"
      >
         Chala
      </a>
    </span>
    <span>
      Get
      <a
        className="text-primary"
        href="https://github.com/ichala/kanban-it"
        rel="noreferrer"
        target="_blank"
      >
         SourceCode
      </a>
    </span>
  </div>
</main>
`;

exports[`renders NewCard  correctly 1`] = `
<main
  className="bg-base-200 min-h-screen"
  data-theme="night"
>
  <a
    href="/undefined/new"
    onClick={[Function]}
  >
    <div
      className="relative flex flex-col text-primary/30 hover:text-primary/100  items-center outline outline-dashed p-4 mt-3 rounded-lg cursor-pointer"
    >
      <h2
        className="text-md font-bold text-center "
      >
        New Card
      </h2>
    </div>
  </a>
</main>
`;

exports[`renders NewColumn  correctly 1`] = `
<main
  className="bg-base-200 min-h-screen"
  data-theme="night"
>
  <div
    className="modal modal-open"
  >
    <div
      className="modal-box flex flex-col justify-center items-center"
    >
      <input
        className="input input-bordered w-full max-w-xs my-2"
        onChange={[Function]}
        placeholder="Column Name"
        type="text"
      />
      <div
        className="circle-picker py-4 color_pick_item"
        style={
          Object {
            "display": "flex",
            "flexWrap": "wrap",
            "marginBottom": -14,
            "marginRight": -14,
            "width": 252,
          }
        }
      >
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #f44336",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #f44336",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #f44336",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #f44336",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #f44336",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#f44336"
              />
            </span>
          </div>
        </span>
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #e91e63",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #e91e63",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #e91e63",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #e91e63",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #e91e63",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#e91e63"
              />
            </span>
          </div>
        </span>
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #9c27b0",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #9c27b0",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #9c27b0",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #9c27b0",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #9c27b0",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#9c27b0"
              />
            </span>
          </div>
        </span>
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #673ab7",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #673ab7",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #673ab7",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #673ab7",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #673ab7",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#673ab7"
              />
            </span>
          </div>
        </span>
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #3f51b5",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #3f51b5",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #3f51b5",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #3f51b5",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #3f51b5",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#3f51b5"
              />
            </span>
          </div>
        </span>
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #2196f3",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #2196f3",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #2196f3",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #2196f3",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #2196f3",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#2196f3"
              />
            </span>
          </div>
        </span>
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #03a9f4",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #03a9f4",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #03a9f4",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #03a9f4",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #03a9f4",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#03a9f4"
              />
            </span>
          </div>
        </span>
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #00bcd4",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #00bcd4",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #00bcd4",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #00bcd4",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #00bcd4",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#00bcd4"
              />
            </span>
          </div>
        </span>
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #009688",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #009688",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #009688",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #009688",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #009688",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#009688"
              />
            </span>
          </div>
        </span>
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #4caf50",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #4caf50",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #4caf50",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #4caf50",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #4caf50",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#4caf50"
              />
            </span>
          </div>
        </span>
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #8bc34a",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #8bc34a",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #8bc34a",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #8bc34a",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #8bc34a",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#8bc34a"
              />
            </span>
          </div>
        </span>
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #cddc39",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #cddc39",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #cddc39",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #cddc39",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #cddc39",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#cddc39"
              />
            </span>
          </div>
        </span>
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #ffeb3b",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #ffeb3b",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #ffeb3b",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #ffeb3b",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #ffeb3b",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#ffeb3b"
              />
            </span>
          </div>
        </span>
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #ffc107",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #ffc107",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #ffc107",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #ffc107",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #ffc107",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#ffc107"
              />
            </span>
          </div>
        </span>
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #ff9800",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #ff9800",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #ff9800",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #ff9800",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #ff9800",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#ff9800"
              />
            </span>
          </div>
        </span>
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #ff5722",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #ff5722",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #ff5722",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #ff5722",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #ff5722",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#ff5722"
              />
            </span>
          </div>
        </span>
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #795548",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #795548",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #795548",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #795548",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #795548",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#795548"
              />
            </span>
          </div>
        </span>
        <span
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            style={
              Object {
                "MozTransform": "scale(1)",
                "MozTransition": "100ms transform ease",
                "OTransform": "scale(1)",
                "OTransition": "100ms transform ease",
                "WebkitTransform": "scale(1)",
                "WebkitTransition": "100ms transform ease",
                "height": 28,
                "marginBottom": 14,
                "marginRight": 14,
                "msTransform": "scale(1)",
                "msTransition": "100ms transform ease",
                "transform": "scale(1)",
                "transition": "100ms transform ease",
                "width": 28,
              }
            }
          >
            <span
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                onClick={[Function]}
                onKeyDown={[Function]}
                style={
                  Object {
                    "MozBorderRadius": "50%",
                    "MozBoxShadow": "inset 0 0 0 15px #607d8b",
                    "MozTransition": "100ms box-shadow ease",
                    "OBorderRadius": "50%",
                    "OBoxShadow": "inset 0 0 0 15px #607d8b",
                    "OTransition": "100ms box-shadow ease",
                    "WebkitBorderRadius": "50%",
                    "WebkitBoxShadow": "inset 0 0 0 15px #607d8b",
                    "WebkitTransition": "100ms box-shadow ease",
                    "background": "transparent",
                    "borderRadius": "50%",
                    "boxShadow": "inset 0 0 0 15px #607d8b",
                    "cursor": "pointer",
                    "height": "100%",
                    "msBorderRadius": "50%",
                    "msBoxShadow": "inset 0 0 0 15px #607d8b",
                    "msTransition": "100ms box-shadow ease",
                    "outline": "none",
                    "position": "relative",
                    "transition": "100ms box-shadow ease",
                    "width": "100%",
                  }
                }
                tabIndex={0}
                title="#607d8b"
              />
            </span>
          </div>
        </span>
      </div>
      <div
        className="modal-action"
      >
        <a
          className="btn btn-sm"
          href="/"
          onClick={[Function]}
        >
          Cancel
        </a>
        <button
          className="btn btn-primary btn-sm"
          href="#new_album"
          onClick={[Function]}
          type="button"
        >
          Create
        </button>
      </div>
    </div>
  </div>
</main>
`;
